# zenoh-pico-playground

./: .gitmodules  README.md  west.yml  west_flash_all.sh
apps/zenoh-session-restart/: CMakeLists.txt  Kconfig  prj.conf
apps/zenoh-session-restart/boards/: nucleo_f439zi.conf
apps/zenoh-session-restart/src/: main.c
boards/arm/nucleo_f439zi/: Kconfig.board  Kconfig.defconfig  nucleo_f439zi.dts  nucleo_f439zi.yaml
lib/: CMakeLists.txt  Kconfig
zephyr/: module.yml
